Prevent horizontal scrolling

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -43,5 +43,6 @@ body {
     line-height: 1.6;
     width: 100%;
     height: 100%;
-    background-color: lighten($color-grey, 40%);;
+    background-color: lighten($color-grey, 40%);
+    overflow-x: hidden;
 }
